Transform to static handling of pdf generation, input from resource folder directly, instead of File. Small amount of other suggested changes